--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   change_app_package_name: ^1.1.0
-  firebase_core:
+  firebase_core: any
   firebase_auth: any
   cloud_firestore: ^3.1.6
   firebase_messaging: ^11.1.0
@@ -44,6 +44,7 @@ dependencies:
   firebase_dynamic_links: ^3.0.1
   flutter_local_notifications: ^9.1.0
   firebase_core_platform_interface: 4.5.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
